fix(table) border collapse

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ ul{
 
 table{
   height: 200px;
+  border-collapse: collapse;
+
 }
 
   th {
